# DeepLearningFTN

./: .gitignore  02_Estimacija parametara.ipynb  02_Estimacija parametara.rar  03_autograd metod.ipynb  04_optimizatori.ipynb  05_spiral classification.ipynb  06_subclasses.ipynb  07_aktivacione funkcije.ipynb  08_rad sa slikama.ipynb  09_datasets.ipynb  10_CNN.ipynb  =4.2.0  README.md  diagnose_fhat.py  latest_report.txt  pyproject.toml  requirements.txt  run_exp4.py  run_exp5.py  run_exp6.py  run_exp7.py  run_experiments.py
checkpoints/: core_msd_icnn_baseline.pt  core_msd_icnn_stable.pt  damped_pendulum_n4_trajectory_derivative_baseline.pt  damped_pendulum_n4_trajectory_derivative_stable.pt  latest_training_config.json  msd_random_alpha1e3_baseline.pt  msd_random_alpha1e3_stable.pt  p4_random_alpha1e3_baseline.pt  p4_random_alpha1e3_stable.pt  p4_random_large_e500_alpha1e5_baseline.pt  p4_random_large_e500_alpha1e5_stable.pt  p4_random_large_e500_baseline.pt  p4_random_large_e500_stable.pt  p4_rollout_aug_stable.pt  p4_traj_alpha1e5_baseline.pt  p4_traj_alpha1e5_stable.pt  p4_twophase_stable.pt  swe2d_cnn_baseline.pt  swe2d_cnn_baseline_derivative.pt  swe2d_cnn_energy_projected.pt  swe2d_cnn_energy_projected_derivative.pt
notebooks/: 01_core_icnn_lyapunov_experiments.ipynb  01_generate_data.ipynb  02_train_models.ipynb  03_evaluate_results.ipynb  04_exp7_rollout_augmented_lyapunov_analysis.ipynb  05_swe2d_simulator_animator.ipynb  06_swe2d_learning_dynamics.ipynb  07_core_icnn_lyapunov_experiments.ipynb  08_three_body_icnn_fun_case.ipynb  (+4 more)
shallow_water/: __init__.py  (+7 more)
(+54 files in other folders)
